--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 </div>
                 <div class="convert-settings" id="convertSettings" style="display: none;">
                     <div class="convert-settings-row">
+                        <label>分辨率：<input type="number" id="resolutionInput" min="20" max="200" value="80" title="像素格子数量，越大越清晰"><span class="convert-settings-hint">（20~200，越大越清晰）</span></label>
                         <label>颜色数量：<input type="number" id="colorCountInput" min="24" max="256" value="24" title="最少24色"><span class="convert-settings-hint">（24~256）</span></label>
-                        <label>像素大小：<input type="number" id="pixelSizeInput" min="10" max="208" value="208" title="像素越大越清晰"><span class="convert-settings-hint">（10~208，越大越清晰）</span></label>
                     </div>
                     <button class="convert-btn" id="convertBtn">转为像素画</button>
                 </div>
